# covey

./: ARCHITECTURE.md  Cargo.toml  README.md  comette.code-workspace  covey.code-workspace  justfile  qpmu.code-workspace
comette/: Cargo.toml  build.rs
comette-manifest/: Cargo.toml
comette-manifest-macro/: Cargo.toml
comette-manifest-macro/src/: lib.rs
comette-manifest/src/: generate.rs  lib.rs
comette-plugin/: Cargo.toml  README.md
comette-plugin/proto/: plugin.proto
comette-plugin/src/: hotkey.rs  lib.rs  list.rs  manifest.rs  server.rs  sql.rs  store.rs
comette-tauri/: eslint.config.js  package.json  pnpm-lock.yaml
comette-tauri/comette-tauri-types/: Cargo.toml
comette-tauri/comette-tauri-types/src/: lib.rs
comette-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
comette-tauri/src-tauri/icons/: icon.icns
comette-tauri/src-tauri/src/: ipc.rs  lib.rs  main.rs  state.rs
comette-tauri/src-tauri/src/ipc/: frontend.rs  model.rs
comette-tauri/src/lib/: commands.ts  menu.svelte.ts  utils.ts
comette-tauri/src/routes/: +layout.ts  +page.svelte
comette/src/: config.rs  event.rs  host.rs  hotkey.rs  lib.rs  list_item.rs  lock.rs  plugin.rs  result_list.rs
comette/src/plugin/: manifest.rs  plugin.rs
covey/: Cargo.toml  README.md  build.rs
covey-config/: Cargo.toml  README.md
covey-config-macro/: Cargo.toml
covey-config-macro/src/: lib.rs
covey-config/src/: config.rs  generate.rs  hotkey.rs  keyed_list.rs  lib.rs  manifest.rs
covey-config/src/generate/: generate_ext.rs  generate_types.rs
covey-egui/: Cargo.toml
covey-egui/src/: button.rs  cli.rs  conv.rs  hotkeys.rs  lib.rs  main.rs  row.rs  style.rs  widgets.rs
covey-egui/src/egui_tao/: clipboard.rs  mod.rs  window_settings.rs
covey-manifest/: Cargo.toml
covey-manifest-macro/: Cargo.toml
covey-manifest-macro/src/: lib.rs
covey-manifest-macros/: Cargo.toml
covey-manifest-macros/src/: lib.rs
covey-manifest/src/: commands.rs  generate.rs  lib.rs  ordered_map.rs
covey-manifest/src/generate/: generate_ext.rs  generate_types.rs
covey-plugin/: Cargo.toml  README.md
covey-plugin/proto/: plugin.proto
covey-plugin/src/: action.rs  input.rs  into_proto.rs  lib.rs  list.rs  manifest.rs  menu.rs  plugin.rs  plugin_lock.rs  poke.rs  rank.rs  server.rs  spawn.rs  store.rs
covey-proto/: Cargo.toml
covey-proto/proto/: plugin.proto
covey-proto/src/: lib.rs
covey-schema/: Cargo.toml  README.md
covey-schema/src/: config.rs  generate.rs  hotkey.rs  id.rs  keyed_list.rs  lib.rs  manifest.rs  style.rs
covey-schema/src/generate/: generate_ext.rs  generate_types.rs
covey-tauri/: README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js
covey-tauri/covey-tauri-types/: Cargo.toml
covey-tauri/covey-tauri-types/src/: lib.rs
covey-tauri/src/: global.scss  prelude.scss
covey-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
covey-tauri/src-tauri/capabilities/: default.json  settings.json
covey-tauri/src-tauri/src/: ipc.rs  lib.rs  main.rs  state.rs  window.rs
covey-tauri/src/lib/: bindings.ts  icons.ts  keys.ts  menu.svelte.ts  settings.svelte.ts  tracing.ts  utils.ts  window.ts
covey-tauri/src/lib/components/: button.svelte  button_circle.svelte  button_pill.svelte  command.svelte  config.svelte  divider.svelte  dnd_list.svelte  hotkey_keys.svelte  input_bool.svelte  input_field.svelte  input_file_path.svelte  (+12 more)
covey-tauri/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
covey/src/: cache.rs  config.rs  event.rs  from_proto.rs  host.rs  hotkey.rs  lib.rs  plugin.rs  proto.rs  spawn.rs
plugins/echo/: Cargo.toml
plugins/echo/src/: lib.rs
qlist-api/: Cargo.toml
qlist-api/src/: lib.rs
qlist-api/wit/: world.wit
qpmu/: Cargo.toml  build.rs
qpmu-api/: Cargo.toml  README.md
qpmu-api/proto/: plugin.proto
qpmu-api/src/: lib.rs  rank.rs  sql.rs
qpmu-api/wit/: world.wit
qpmu-gtk/: Cargo.toml
qpmu-gtk-reactive/: Cargo.toml
qpmu-gtk-reactive/src/: gtk_utils.rs  hotkey.rs  main.rs  reactive.rs  styles.rs  ui.rs  utils.rs
qpmu-gtk-reactive/src/ui/: entry.rs  menu.rs  results_list.rs  settings.rs  state.rs
qpmu-gtk-reactive/src/ui/settings/: plugin_list.rs
qpmu-gtk-reactive/src/utils/: clone.rs  reactive.rs  stores.rs  widget_ext.rs
qpmu-gtk/src/: hotkey.rs  install.rs  main.rs  model.rs  settings.rs  styles.rs  tray_icon.rs  ui.rs
qpmu-gtk/src/settings/: messages.rs  plugin_list.rs  ui.rs
qpmu-gtk/styles/: style.css
qpmu-manifest/: Cargo.toml
qpmu-manifest-macro/: Cargo.toml
qpmu-manifest-macro/src/: lib.rs
qpmu-manifest/src/: generate.rs  lib.rs
qpmu-plugin/: Cargo.toml  README.md
qpmu-plugin/proto/: plugin.proto
qpmu-plugin/src/: context.rs  details.rs  hotkey.rs  input.rs  lib.rs  list.rs  list_item.rs  manifest.rs  plugin.rs  rank.rs  server.rs  store.rs
qpmu-tauri/: .gitignore  .prettierrc  package.json  pnpm-lock.yaml  svelte.config.js
qpmu-tauri/qpmu-tauri-types/: Cargo.toml
qpmu-tauri/qpmu-tauri-types/src/: lib.rs
qpmu-tauri/src/: commands.ts  global.scss  setup.svelte.ts
qpmu-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
qpmu-tauri/src-tauri/capabilities/: default.json
qpmu-tauri/src-tauri/src/: ipc.rs  lib.rs  main.rs  state.rs  window.rs
qpmu-tauri/src-tauri/src/ipc/: frontend.rs  model.rs  window.rs
qpmu-tauri/src/lib/: commands.ts  icons.ts  menu.svelte.ts
qpmu-tauri/src/routes/: +layout.svelte  +layout.ts  +page.svelte
qpmu/src/: config.rs  details.rs  hotkey.rs  input.rs  lib.rs  list_item.rs  plugin.rs  result_list.rs
qpmu/src/plugin/: action.rs  bindings.rs  event.rs  host.rs  manifest.rs  plugin.rs  wrappers.rs
qpmu/src/plugin/wrappers/: action.rs  list_item.rs  plugin.rs
scripts/: build  build-plugins  dev  publish
src/: config.rs  install.rs  lib.rs  main.rs  model.rs  plugin.rs  plugins.rs  result_list.rs  styles.rs  ui.rs  utils.rs
src/plugin/: bindings.rs  event.rs  host.rs  init.rs  wrappers.rs
src/plugin/wrappers/: list_item.rs  plugin.rs
src/plugins/: bindings.rs  comm.rs  init.rs  wrappers.rs
styles/: style.css
(+5 files in other folders)
