[workspace]
members = [
    "covey-plugin",
    "covey",
    "covey-config",
    "covey-config-macro",
    "covey-tauri/src-tauri",
    "covey-tauri/covey-tauri-types",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
az = "1.2.1"
dirs = "5.0.1"
color-eyre = "0.6.3"
tokio = "1.41.0"
futures = "0.3.31"
tracing = "0.1.41"
serde = { version = "1", features = ["derive"] }
prost = "0.13.3"
tonic = "0.12.3"
toml = { version = "0.8.19", features = ["preserve_order"] }
parking_lot = "0.12"
syn = "2"
quote = "1"
proc-macro2 = "1"
ts-rs = "10.1"
serde_json = "1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
items_after_statements = "allow"
semicolon_if_nothing_returned = "allow"
