[workspace]
members = [
    "covey",
    "covey-egui",
    "covey-manifest-macros",
    "covey-plugin",
    "covey-proto",
    "covey-schema",
]
resolver = "2"

[workspace.package]
# version should be used by all crates except covey-plugin
# and covey-manifest-macros
version = "0.0.2"
edition = "2024"
license = "MIT"
authors = ["blorbb"]
repository = "https://github.com/blorbb/covey"

[workspace.dependencies]
anyhow = "1"
arboard = { version = "3", features = ["wayland-data-control"] }
az = "1"
clap = "4.5.51"
covey = { path = "covey", version = "0.0.2" }
covey-manifest-macros = { path = "covey-manifest-macros", version = "0.0.2" }
covey-proto = { path = "covey-proto", version = "0.0.2" }
covey-schema = { path = "covey-schema", version = "0.0.2" }
dirs = "6"
eframe = "0.34.1"
egui = "0.34.1"
egui_extras = "0.34.1"
font-kit = { version = "0.14", default-features = false }
freedesktop-icons = "0.4"
hex_color = "3"
image = { version = "0.25", default-features = false }
interprocess = "2.2.3"
mimalloc = { version = "0.1", features = ["v3"] }
notify-rust = "4"
parking_lot = "0.12"
proc-macro-error2 = "2"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skim = { version = "4", default-features = false }
syn = "2"
tokio = "1"
toml = { version = "1", features = ["preserve_order"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
ts-rs = "12"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
items_after_statements = "allow"
semicolon_if_nothing_returned = "allow"
single_match = "allow"
single_match_else = "allow"
match_same_arms = "allow" # formatting consistency
doc_markdown = "allow"
cast_precision_loss = "allow" # often want to cast int to f32/64, precision doesn't matter
unnecessary_semicolon = "allow" # formatting consistency
struct_excessive_bools = "allow"
similar_names = "allow"
too_many_lines = "allow"
struct_field_names = "allow"
needless_return = "allow" # formatting consistency and futureproofing
new_without_default = "allow"
