[package]
name = "comette-plugin"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
prost.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.16", default-features = false, features = [
    "net",
] }
tonic.workspace = true
az.workspace = true
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "time",
] }
anyhow = "1.0.93"
sublime_fuzzy = "0.7.0"
time = "0.3"
parking_lot = "0.12"
comette-manifest = { path = "../comette-manifest" }
comette-manifest-macro = { path = "../comette-manifest-macro" }
serde.workspace = true
toml.workspace = true

[build-dependencies]
tonic-build = "0.12.3"
