[package]
name = "covey-egui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
egui = { version = "0.33" }
eframe = "0.33.0"
tray-icon = "0.21"
tracing.workspace = true
arboard = { version = "3.6.0", features = ["image-data"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow.workspace = true
winit = "0.30.12"
interprocess = "2.2.3"
parking_lot.workspace = true
covey = { path = "../covey" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true

[features]
wayland = []
x11 = []

[[bin]]
name = "covey"
path = "src/main.rs"
