[package]
name = "covey-egui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "covey"
path = "src/main.rs"

[features]
wayland = []
x11 = []

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
covey.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras = { workspace = true, features = ["file", "svg", "all_loaders"] }
font-kit = { workspace = true, features = ["source", "source-fontconfig"] }
image = { workspace = true, features = ["jpeg", "png"] }
interprocess.workspace = true
mimalloc.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# tray-icon = "0.21"

[package.metadata.cargo-machete]
# features on image are used by egui_extras for which image loaders to use.
ignored = ["image"]

[lints]
workspace = true
