[package]
name = "covey-manifest-macros"
# update this separately to everything else
# but keep in sync with covey-plugin
version = "0.0.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Proc macro export for covey-plugin"

[dependencies]
proc-macro-error2 = "2"
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
covey-schema = { path = "../covey-schema", version = "0.0.2" }

[lib]
proc-macro = true

[lints]
workspace = true
