[package]
name = "covey-manifest-macros"
# update this separately to everything else
# but keep in sync with covey-plugin
version = "0.0.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Proc macro export for covey-plugin"

[lib]
proc-macro = true

[dependencies]
covey-schema.workspace = true
proc-macro-error2.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lints]
workspace = true
