[package]
name = "covey-manifest"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
syn.workspace = true
toml.workspace = true
indexmap.workspace = true
ts-rs = { workspace = true, optional = true }

[lints]
workspace = true

[features]
# Enables generating typescript types of the manifest types.
ts-rs = ["dep:ts-rs"]
