[package]
name = "covey-plugin"
# update this separately to everything else
# but keep in sync with covey-manifest-macros
version = "0.0.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
# 1.85 required for async closures / AsyncFn.
# this might be outdated, im not really gonna update this.
# i only guarantee that this runs on latest stable.
rust-version = "1.85"
description = "APIs for creating Covey plugins"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt", "macros", "io-util", "io-std"] }
tokio-stream = { version = "0.1.16", default-features = false, features = [
    "net",
] }
az.workspace = true
anyhow.workspace = true
sublime_fuzzy = "0.7.0"
time = { version = "0.3", features = ["serde"] }
parking_lot.workspace = true
covey-manifest-macros = { path = "../covey-manifest-macros", version = "0.0.2" }
covey-proto = { path = "../covey-proto", version = "0.0.2" }
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
