[package]
name = "covey-plugin"
# update this separately to everything else
# but keep in sync with covey-manifest-macros
version = "0.0.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
# 1.85 required for async closures / AsyncFn.
# this might be outdated, im not really gonna update this.
# i only guarantee that this runs on latest stable.
rust-version = "1.85"
description = "APIs for creating Covey plugins"

[dependencies]
anyhow.workspace = true
az.workspace = true
covey-manifest-macros.workspace = true
covey-proto.workspace = true
dirs.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
skim.workspace = true
tokio = { workspace = true, features = [
    "rt",
    "macros",
    "io-util",
    "io-std",
    "time",
] }

[lints]
workspace = true
