[package]
name = "covey-plugin"
# update this separately to everything else
# but keep in sync with covey-manifest-macros
version = "0.0.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version = "1.91"
description = "APIs for creating Covey plugins"

[dependencies]
anyhow.workspace = true
az.workspace = true
covey-manifest-macros.workspace = true
covey-proto.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
skim.workspace = true
tokio = { workspace = true, features = [
    "rt",
    "macros",
    "io-util",
    "io-std",
    "time",
] }

[lints]
workspace = true
