[package]
name = "covey-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Protocol types and communication for covey"

[dependencies]
serde.workspace = true
serde_json.workspace = true
covey-schema = { path = "../covey-schema", version = "0.0.2" }

[lints]
workspace = true
