[package]
name = "covey-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Protocol types and communication for covey"

[dependencies]
covey-schema.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
