[package]
name = "covey-schema"
version = "0.1.0"
edition.workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
syn.workspace = true
toml.workspace = true
ts-rs = { workspace = true, optional = true, features = ["serde-json-impl"] }

[lints]
workspace = true

[features]
# Enables generating typescript types of the manifest types.
ts-rs = ["dep:ts-rs"]
