[package]
name = "covey"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "IO interface for the Covey application"

[dependencies]
anyhow.workspace = true
covey-proto.workspace = true
covey-schema.workspace = true
dirs.workspace = true
freedesktop-icons.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "process", "sync", "io-util"] }
toml.workspace = true
tracing.workspace = true

[lints]
workspace = true
