[package]
name = "qpmu-gtk-reactive"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "qpmu-gtk-reactive"
path = "src/main.rs"

[dependencies]
dirs.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
az.workspace = true
toml.workspace = true
qpmu = { path = "../qpmu" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
arboard = { version = "3.4.1", features = ["wayland-data-control"] }
clap = { version = "4.5.20", features = ["derive"] }
tray-item = { version = "0.10", features = ["ksni"] }
tap = "1"
reactive_graph = { version = "0.1.3", features = ["effects", "tracing"] }
gtk = { package = "gtk4", version = "0.9", features = ["v4_6"]}
any_spawner = { version = "0.2.0", features = ["glib"] }
bon = "3.3.2"
paste = "1"
