[package]
name = "qpmu-gtk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qpmu"
path = "src/main.rs"

[dependencies]
dirs = "5.0.1"
qpmu = { path = "../qpmu" }
color-eyre = "0.6.3"
tokio = { version = "1.41.0", features = ["full"] }
relm4 = "0.9.1"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
arboard = "3.4.1"
clap = { version = "4.5.20", features = ["derive"] }
