[package]
name = "qpmu-gtk"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "qpmu"
path = "src/main.rs"

[dependencies]
dirs.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
az.workspace = true
qpmu = { path = "../qpmu" }
relm4 = "0.9.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
arboard = { version = "3.4.1", features = ["wayland-data-control"] }
clap = { version = "4.5.20", features = ["derive"] }
tray-item = { version = "0.10", features = ["ksni"] }
