[package]
name = "qpmu"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
color-eyre.workspace = true
toml = "0.8.19"
serde.workspace = true
futures.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["fs", "process"] }
tonic.workspace = true
prost.workspace = true
az.workspace = true
dirs.workspace = true

[build-dependencies]
tonic-build = "0.12.3"
