[package]
name = "comette-tauri-types"
version = "0.1.0"
edition = "2024"

[dependencies]
comette-manifest = { path = "../../comette-manifest", optional = true }
ts-rs = { version = "10.1", optional = true }
serde.workspace = true

[lints]
workspace = true

[features]
build = ["dep:comette-manifest", "dep:ts-rs", "comette-manifest/ts-rs"]
