[package]
name = "comette-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "comette_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "comette"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
comette-tauri-types = { path = "../comette-tauri-types", features = ["build"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comette = { path = "../../comette" }
color-eyre.workspace = true
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-notification = "2"
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio.workspace = true
comette-tauri-types = { path = "../comette-tauri-types" }
freedesktop-icons = "0.2.6"
tauri-plugin-fs = "2"

[lints]
workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
