[package]
name = "covey-tauri-types"
version = "0.1.0"
edition = "2024"

[dependencies]
covey-config = { path = "../../covey-config" }
covey = { path = "../../covey", optional = true }
ts-rs = { workspace = true, optional = true }
serde.workspace = true

[lints]
workspace = true

[features]
build = ["dep:covey", "dep:ts-rs", "covey-config/ts-rs", "covey/ts-rs"]
