[package]
name = "covey-tauri-types"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
covey-schema = { path = "../../covey-schema" }
ts-rs = { workspace = true, optional = true }
serde.workspace = true

[lints]
workspace = true

[features]
build = ["dep:ts-rs", "covey-schema/ts-rs"]
