[package]
name = "covey-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition.workspace = true
publish = false

[lib]
name = "covey_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "covey"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
covey-tauri-types = { path = "../covey-tauri-types", features = ["build"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
covey = { path = "../../covey" }
covey-schema = { path = "../../covey-schema" }
color-eyre.workspace = true
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-notification = "2"
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio.workspace = true
covey-tauri-types = { path = "../covey-tauri-types" }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

[lints]
workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
