[package]
name = "covey-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "covey_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "covey"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
covey-tauri-types = { path = "../covey-tauri-types", features = ["build"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde_json = "1"
covey = { path = "../../covey" }
covey-schema = { path = "../../covey-schema" }
color-eyre.workspace = true
tracing.workspace = true
tokio.workspace = true
parking_lot.workspace = true
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-notification = "2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
covey-tauri-types = { path = "../covey-tauri-types" }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
# gtk layer shell
gtk = { version = "0.18", optional = true }
gtk-layer-shell = { version = "0.8", features = ["v0_6"], optional = true }

[features]
default = ["layer-shell"]
layer-shell = ["dep:gtk", "dep:gtk-layer-shell"]

[lints]
workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[package.metadata.cargo-machete]
# serde_json: used by tauri::generate_context!
ignored = ["serde_json"]
