[package]
name = "qpmu-tauri-types"
version = "0.1.0"
edition = "2024"

[dependencies]
qpmu-manifest = { path = "../../qpmu-manifest", optional = true }
ts-rs = { version = "10.1", optional = true }
serde.workspace = true

[lints]
workspace = true

[features]
build = ["dep:qpmu-manifest", "dep:ts-rs", "qpmu-manifest/ts-rs"]
