[package]
name = "qpmu-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "qpmu_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qpmu = { path = "../../qpmu" }
color-eyre.workspace = true
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-notification = "2"
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio.workspace = true

[lints]
workspace = true
